kubernetes/apps/cloudnative-pg/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
