kubernetes/apps/cloudnative-pg/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pg-ingress-tcp
  namespace: prod

spec:
  entryPoints:
    - pg
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: HostSNI(`pg.home.lungoo.de`)
      services:
        - name: psql-cluster-rw
          port: 5432
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pg-ingress-tcp
  namespace: testing

spec:
  entryPoints:
    - pg
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: HostSNI(`pg-testing.home.lungoo.de`)
      services:
        - name: psql-cluster-rw
          port: 5432
